# bfss_server

./: .gitignore  CMakeLists.txt  README.md
TestCase/: CMakeLists.txt  exec_pres.sh
TestCase/client/: CMakeLists.txt  Client_Test.cpp  Client_Test.h  RegManager_Test.cpp  RegManager_Test.h  StorageNode_Test.cpp  StorageNode_Test.h
TestCase/client/go/src/bfss_client/: bfss_client.go
TestCase/pressure/: Makefile  go.mod  go.sum  main.go  readme.md
TestCase/pressure/app/: app.go  stats.go  strategy.go  task.go
TestCase/pressure/conf/: config.json
TestCase/pressure/ipc/: client.go  server.go  server_test.go
TestCase/pressure/rpc/: bfss.go
TestCase/pressure/test/: async_file.go  async_file_test.go  complete_object.go  create_object.go  create_object_test.go  delete_object.go  delete_object_test.go  get_object.go  get_object_test.go  link.go  link_test.go  slice.go  slice_test.go  write.go  write_test.go
TestCase/pressure/web/: http.go  http_test.go
TestCase/pressure/web/handler/: task.go
TestCase/pressure/web/ui/: package-lock.json  package.json  vue.config.js
TestCase/pressure/web/ui/public/: index.html
TestCase/pressure/web/ui/src/: App.vue  http.js  main.js  router.js
TestCase/pressure/web/ui/src/components/: NewTask.vue  Task.vue
TestCase/pressure/web/ui/src/views/: Tasks.vue  stats.vue
TestCase/utils/: CMakeLists.txt  Utils_Test.cpp  Utils_Test.h
bfss_api/: CMakeLists.txt  bfss_api.cpp  bfss_api.h  bfss_api.thrift  main.cpp
bfss_docs/: BFSS .txt  BFSSMDB.txt  BFSS对外CDN接口.txt  BFSS对外接口.txt  BFSS设计规格说明.md  架构图.odt
bfss_docs/images/: Ultimate_Architecture.dot  base_Architecture.dot  bfss_deploy_sample.dot  bfss_internal_arch.dot  optimized_Architecture.dot  phase1_Architecture.dot  phase2_Architecture.dot
bfss_regm/: CMakeLists.txt  bfss_regm.cpp  bfss_regm.h  bfss_regm.thrift  main.cpp
bfss_sn/: CMakeLists.txt  bfss_cache.cpp  bfss_cache.h  bfss_keys.cpp  bfss_keys.h  bfss_node.cpp  bfss_node.h  bfss_sn.cpp  bfss_sn.h  bfss_sn.thrift  blkdev.cpp  blkdev.h  main.cpp
bfss_web/: ReadMe.md  main.go
bfss_web/BFSS_API/: GoUnusedProtection__.go  bfss_api-consts.go  bfss_api.go
bfss_web/BFSS_API/b_f_s_s__a_p_i_d-remote/: b_f_s_s__a_p_i_d-remote.go
bfss_web/bfss/: GoUnusedProtection__.go  bfss_result-consts.go  bfss_result.go
bfss_web/common/: client.go
bfss_web/config/: config.go  server.go
bfss_web/service/: api.go
bfss_web/settings/: server.yml
tools/: FindLibmemcached.cmake  FindLog4cxx.cmake  deploy.sh  fix.patch  libmemcached-build.patch
utils/: bffs_memcache.cpp  bffs_memcache.h  bfss_base.h  bfss_cache.h  bfss_cilent_helper.h  bfss_config.h  bfss_exception.h  bfss_mongo_utils.h  bfss_result.thrift  bfss_signal.cpp  bfss_signal.h  bfss_utils.cpp  bfss_utils.h
